# 2024-Wind-Power-Prediction

./: README.md  README.txt  README.txt.txt  pyproject.toml  requirements.txt  requirements_conda.txt  requirements_pip.txt  씽씽 불어라팀 최종 제출.csv
notebooks/: data_optimize.ipynb  final.ipynb
src/: config.py  data_connector.py  data_pipeline.py  data_processor.py  download_LDAPS.py  metric.py  utils.py
