[project]
name = "2024-wind-power-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Yongmin Kwon",email = "ym.kwon@60hz.io"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "astral (>=3.2,<4.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
